--- a/cuahangvp/src/components/Header/Header.css
+++ b/cuahangvp/src/components/Header/Header.css
@@ -117,3 +117,9 @@
 .nav-link:hover {
     color: #dcdcdc; /* Màu chữ khi hover */
 }
+.nav-link.active {
+    font-weight: bold;
+    color: #b0bec5; /* Màu sắc khi tab được chọn */
+    border-bottom: 2px solid #b0bec5; /* Đường viền dưới tab được chọn */
+  }
+  
